// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridRowAlign renders 0 1`] = `
Array [
  .c0 {
  grid-row-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowAlign renders function 1`] = `
Array [
  .c0 {
  grid-row-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowAlign renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-row-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowAlign renders negative number 1`] = `
Array [
  .c0 {
  grid-row-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowAlign renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  grid-row-align: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-align: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-align: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-align: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-align: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowAlign renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-row-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-row-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-align: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-align: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowAlign renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  grid-row-align: July;
}

@media May {
  .c0 {
    grid-row-align: August;
  }
}

@media April {
  .c0 {
    grid-row-align: September;
  }
}

@media January {
  .c0 {
    grid-row-align: November;
  }
}

@media April {
  .c0 {
    grid-row-align: August;
  }
}

@media June {
  .c0 {
    grid-row-align: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: July;
}

@media May {
  .c0 {
    grid-row-align: August;
  }
}

@media April {
  .c0 {
    grid-row-align: September;
  }
}

@media January {
  .c0 {
    grid-row-align: November;
  }
}

@media April {
  .c0 {
    grid-row-align: August;
  }
}

@media June {
  .c0 {
    grid-row-align: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-align: November;
  }
}

@media April {
  .c0 {
    grid-row-align: January;
  }
}

@media January {
  .c0 {
    grid-row-align: December;
  }
}

@media April {
  .c0 {
    grid-row-align: April;
  }
}

@media June {
  .c0 {
    grid-row-align: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-align: November;
  }
}

@media April {
  .c0 {
    grid-row-align: January;
  }
}

@media January {
  .c0 {
    grid-row-align: December;
  }
}

@media April {
  .c0 {
    grid-row-align: April;
  }
}

@media June {
  .c0 {
    grid-row-align: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowAlign renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    grid-row-align: July;
  }
}

@media April {
  .c0 {
    grid-row-align: August;
  }
}

@media January {
  .c0 {
    grid-row-align: September;
  }
}

@media April {
  .c0 {
    grid-row-align: November;
  }
}

@media June {
  .c0 {
    grid-row-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-row-align: July;
  }
}

@media April {
  .c0 {
    grid-row-align: August;
  }
}

@media January {
  .c0 {
    grid-row-align: September;
  }
}

@media April {
  .c0 {
    grid-row-align: November;
  }
}

@media June {
  .c0 {
    grid-row-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-align: January;
  }
}

@media April {
  .c0 {
    grid-row-align: December;
  }
}

@media January {
  .c0 {
    grid-row-align: April;
  }
}

@media April {
  .c0 {
    grid-row-align: May;
  }
}

@media June {
  .c0 {
    grid-row-align: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-align: January;
  }
}

@media April {
  .c0 {
    grid-row-align: December;
  }
}

@media January {
  .c0 {
    grid-row-align: April;
  }
}

@media April {
  .c0 {
    grid-row-align: May;
  }
}

@media June {
  .c0 {
    grid-row-align: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowAlign renders postitive number 1`] = `
Array [
  .c0 {
  grid-row-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowAlign renders string 1`] = `
Array [
  .c0 {
  grid-row-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowAlign renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`gridRowAlign renders valid theme path 1`] = `
Array [
  .c0 {
  grid-row-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
